$Id: CHANGELOG.txt,v 1.4 2010/12/21 11:52:59 andrewschulman Exp $

Role Delegation 7.x-1.0, 2010-12-21
-----------------------------------
#170543 by Andrew Schulman: Rename or delete 'assign role' permissions when roles are renamed or deleted.
#811932 by Pasqualle: Use 'restrict access' parameter for labeling unsafe permissions.
Fix wrong assertion in RoleDelegationRoleEditingTestCase::testRenameRole() in role_delegation.test.

Role Delegation 7.x-1.0-beta1, 2010-12-07
-----------------------------------------
#660640 by Pasqualle: Port to D7; add "Delegate roles" action.
#598840 by Andrew Schulman: Add batch add and remove role operations.
#983574 by Andrew Schulman: Add simple tests for D7.
#946506 by spam38: Fix htmlspecialchars warning on admin/people* pages in drupal 7.x.