@@ -1,13 +1,12 @@
-; $Id: role_delegation.info,v 1.4 2010/12/07 01:43:48 andrewschulman Exp $
 name = Role delegation
 description = Allows site administrators to grant some roles the authority to assign selected roles to users.
 core = 7.x
 files[] = role_delegation.module
 files[] = role_delegation.test
 
-; Information added by drupal.org packaging script on 2010-12-21
-version = "7.x-1.0"
+; Information added by drupal.org packaging script on 2011-06-20
+version = "7.x-1.1"
 core = "7.x"
 project = "role_delegation"
-datestamp = "1292932544"
+datestamp = "1308565019"
 
